2011-03-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the version numbering.

	* configure.ac: Use the new script `git-version-gen' also used by
	sl-core.
	
	* build-aux/package-version: Remove, as this is now obsolete.

	* bootstrap: Fix the relative path to the `slc' sources.

2011-03-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Allow `-n' for benchmarks.

	* benchmarks/lib/benchmark.c: Do not self allocate a fresh
	place. Instead overload the `main' function and rely on
	`__main_place_id' to be allocated by the root SEP initially based
	on `-n'.

	* build-aux/benchmarks.mk: Use `-n' instead of `ncores='.

2011-03-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the livermore loop 21.

	* benchmarks/livermore/kernel21.c (cell): Fix array bounds on VY.

2011-02-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the `mandel' benchmark.

	* benchmarks/mandel/mandel.c: New predicate `INNER_THREAD' to
	enable computing the inner iteration in a separate family.

2011-02-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix distribution of the `fft' benchmark.

	* benchmarks/fft/Makefile.am (BUILT_SOURCES): List the headers
	containing the precomputed tables.

2011-02-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix Unibench distribution.

	* build-aux/benchmarks.mk (.c.tar): Ensure that the Unibench
	Makefiles link benchmarks with the math library.

2011-01-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the `mandel' benchmark.

	* benchmarks/mandel/mandel_colors.c: Make this program more
	exciting to see running (SKIP_MEM + TRACE_COMPUTE).

2011-01-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New 2D cellular automaton benchmark.

	* benchmarks/ca/ca2d.c,
	* benchmarks/ca/ca2d.h,
	* benchmarks/ca/makerule2d.c,
	* benchmarks/ca/benchca.c,
	* benchmarks/ca/benchca_gfx.c,
	* benchmarks/ca/glider.d9000,
	* benchmarks/ca/rpent.d9000,
	* benchmarks/ca/rabbits.d9000,
	* benchmarks/ca/herschel.d9000,
	* benchmarks/ca/lidka.d9000,
	* benchmarks/ca/lidka.d37200,